<resources>
	<string name="app_name">Sri Sabaries</string>
	<string name="txt_login">Login</string>
	<string name="txt_signup">Sign Up</string>
	<string name="hint_email_id">Email or Phone Number</string>
	<string name="hint_password">Password</string>
	<string name="txt_forgot_password">Forgot Password?</string>
	<string name="txt_fit_street">Sri sabaries</string>
	<string name="txt_title_tutorial_first">Online Shopping</string>
	<string name="txt_title_tutorial_second">Buy Anything Easy way</string>
	<string name="txt_title_tutorial_third">Ship at Your Home</string>
	<string name="txt_title_tutorial_fourth">Ecommerce store</string>
	<string name="txt_tutorial_first"> You can shopping anytime, anywhere that you want. </string>
	<string name="txt_tutorial_second"> If you are wondering what to cook today, don\'t worry because we have a list for you. </string>
	<string name="txt_tutorial_third"> The products you order will be delivered to your address.</string>
	<string name="err_email_empty">Please enter email address.</string>
	<string name="err_password_empty">Please enter password.</string>
	<string name="err_cpassword_empty">Please enter confirm password.</string>
	<string name="err_network_connection">Please check your internet connection.</string>
	<string name="txt_blank"> </string>
	<string name="txt_ok">OK</string>
	<string name="txt_cancel">CANCEL</string>
	<string name="txt_female">Female</string>
	<string name="txt_male">Male</string>
	<string name="btn_create_account">CREATE ACCOUNT</string>
	<string name="txt_hint_password">Password</string>
	<string name="txt_hint_email_id">Email Id</string>
	<string name="txt_hint_dob">DOB</string>
	<string name="txt_hint_mobile_no">Mobile No.</string>
	<string name="txt_hint_name">Name</string>
	<string name="txt_starting_text">LET\'S START EXPLORING</string>
	<string name="rb_text_receive_updates">Yes, I\'d like to receive email updates</string>
	<string name="txt_middel_view_text">OR</string>
	<string name="txt_login_with_fb">Login with Facebook</string>
	<string name="txt_login_mail">Login with Email</string>
	<string name="txt_skip">SKIP</string>
	<string name="err_email_invalid">Please enter valid email address</string>
	<string name="app_id">794233090711736</string>
	<string name="dialog_please_wait">Please wait&#8230;</string>
	<string name="err_name_empty">Please enter name</string>
	<string name="err_lname_empty">Please enter last name</string>
	<string name="title_activity_home">HomeActivity</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="txt_drawer_help_support">Help &amp; Support</string>
	<string name="txt_drawer_invite_earn">Invite &amp; Earn</string>
	<string name="txt_drawer_favourites">Favourites</string>
	<string name="txt_drawer_settings">Settings</string>
	<string name="txt_drawer_my_account">My Account</string>
	<string name="txt_drawer_my_cart">My Cart</string>
	<string name="txt_drawer_redeem_points">Redeem FS Points</string>
	<string name="txt_drawer_connect_app_devices"><![CDATA[Connect Apps & Devices]]></string>
	<string name="txt_drawer_home">Home</string>
	<string name="err_mobile_empty">Please enter mobile no.</string>
	<string name="err_cpassword">Password are not same</string>
	<string name="err_password_length">Password must be %1$d-%2$d characters long</string>
	<string name="err_old_password_length">Old password must be %1$d-%2$d characters long</string>
	<string name="err_new_password_length">New password must be %1$d-%2$d characters long</string>
	<string name="err_gender_empty">Please select gender</string>
	<string name="txt_terms_of_use">Sign In </string>
	<string name="txt_privacy_policy">Privacy Policy</string>
	<string name="txt_terms_privacy_policy">By signing up you accept our Terms of Use and Privacy Policy</string>
	<string name="txt_forgot_pwd_title">Forgot Your Password?</string>
	<string name="hint_forgot_pwd">Enter your email id</string>
	<string name="txt_send">SEND</string>
	<string name="txt_forgot_pwd_msg">Please enter your email id below and we\'ll send you a link to reset your password</string>
	<string name="txt_general">General</string>
	<string name="txt_distance">Distance</string>
	<string name="txt_change_password">Change Password</string>
	<string name="txt_information">Information</string>
	<string name="txt_about_us">About Us</string>
	<string name="txt_notifications">Notifications</string>
	<string name="hint_old_pwd">Enter old password</string>
	<string name="hint_new_pwd">Enter new password</string>
	<string name="txt_miles">miles</string>
	<string name="txt_settings">Settings</string>
	<string name="txt_done">Done</string>
	<string name="txt_edit">Edit</string>
	<string name="txt_name">Name</string>
	<string name="txt_gender">Gender</string>
	<string name="txt_mobile_no">Mobile Number</string>
	<string name="txt_dob">Date of Birth</string>
	<string name="txt_email_id">Email Id</string>
	<string name="txt_location">Location</string>
	<string name="txt_height">Height (Feet/Inches)</string>
	<string name="txt_weight">Weight (Kg)</string>
	<string name="txt_my_profile">My Profile</string>
	<string name="err_mobile_invalid">Mobile no. should be 10 digits long</string>
	<string name="alert_login">Please login to access this section.</string>
	<string name="txt_toolbar_home">HOME</string>
	<string name="txt_bottom_left_circle">CALORIES BURNED</string>
	<string name="txt_bottom_middle_circle">Sri sabaries POINTS</string>
	<string name="txt_bottom_right_circle">MILES</string>
	<string name="txt_inner_middle_circle">0</string>
	<string name="txt_inner_right_circle">0</string>
	<string name="txt_inner_left_circle">0</string>
	<string name="txt_my_account">My Account</string>
	<string name="txt_my_orders">My Orders</string>
	<string name="txt_my_addresses">My Addresses</string>
	<string name="txt_logout">Logout</string>
	<string name="alert_verify_email">Please verify your email</string>
	<string name="err_date_invalid">Future date cannot be selected</string>
	<string name="txt_no">No</string>
	<string name="txt_yes">Yes</string>
	<string name="alert_logout">Are you sure you want to logout?</string>
	<string name="alert_exit">Are you sure you want to exit Sri sabaries?</string>
	<string name="txt_no_data">No Data Found</string>
	<string name="txt_no_product">No Product Available</string>
	<string name="txt_save">Save</string>
	<string name="err_old_pwd_empty">Please enter old password</string>
	<string name="err_new_pwd_empty">Please enter new password</string>
	<string name="hint_search">Search</string>
	<string name="txt_arc_menu_share_activities">Share Activities</string>
	<string name="txt_arc_menu_invite_friends">Invite Friends</string>
	<string name="txt_arc_menu_workout">Workout</string>
	<string name="txt_title_coupons">Coupons</string>
	<string name="txt_select_image_from">Select Image From</string>
	<string name="err_permission_denied">Permission Denied</string>
	<string name="per_allow_storage">You need to allow access to external storage</string>
	<string name="per_allow_gservices">You need to allow access to Google services</string>
	<string name="hint_search_by_name">Find something...</string>
	<string name="txt_view_all">VIEW ALL</string>
	<string name="txt_others">Others</string>
	<string name="txt_tabs_title_recommended">RECOMMENDED</string>
	<string name="txt_tabs_title_coupons">COUPONS</string>
	<string name="txt_tabs_title_trending">Latest Products</string>
	<string name="txt_title_recommended">Recommended</string>
	<string name="txt_address">Address</string>
	<string name="txt_pin_code">Pin Code</string>
	<string name="txt_landmark">Landmark</string>
	<string name="txt_state">State</string>
	<string name="txt_city">City</string>
	<string name="txt_cancel_address">Cancel</string>
	<string name="txt_save_address">Save</string>
	<string name="txt_coupons_list_validity">"Valid till "</string>
	<string name="txt_favourite">Favourite</string>
	<string name="txt_remove">Remove</string>
	<string name="txt_add_new_address">ADD NEW ADDRESS</string>
	<string name="txt_no_addresses">YOU HAVE NOT SAVED\nANY ADDRESS.</string>
	<string name="txt_login_nav">Login</string>
	<string name="txt_sign_up_nav">Sign Up</string>
	<string name="txt_notification_circle">0</string>
	<string name="txt_btn_products">Products</string>
	<string name="txt_btn_coupons">Coupons</string>
	<string name="txt_success_set_favourite_coupon">Selected coupon is added to your favourites</string>
	<string name="txt_filter">FILTER</string>
	<string name="txt_partners">Partners</string>
	<string name="txt_set">Set</string>
	<string name="txt_cancel_height">Cancel</string>
	<plurals name="plural_address">
		<item quantity="one">%1$d Address saved</item>
		<item quantity="other">%1$d Addresses saved</item>
	</plurals>
	<string name="txt_success_set_favourite_product">Selected product is set to your favourite</string>
	<string name="txt_success_set_favourite_count">0</string>
	<string name="txt_success_unfavourite_coupon">Coupon is deleted from favourites</string>
	<string name="txt_success_unfavourite_product">Product is deleted from favourites</string>
	<string name="txt_trending_title">Trending</string>
	<string name="txt_selling_price">Selling Price</string>
	<string name="txt_points_to_redeem">Points to Redeem</string>
	<string name="txt_discount">Cashback you will get</string>
	<string name="err_address_empty">Please enter address</string>
	<string name="err_pin_code_empty">Please enter pin code</string>
	<string name="err_state_empty">Please enter state</string>
	<string name="err_city_empty">Please select city</string>
	<string name="txt_reset">Reset</string>
	<string name="alert_remove_address">Are you sure you want to remove this address?</string>
	<string name="txt_buy_now">Buy Now</string>
	<string name="txt_apply">Apply</string>
	<string name="format_price_range">%1$d - %2$d (INR)</string>
	<string name="txt_share_using">Share using</string>
	<string name="txt_select_activity">Select Activity Display</string>
	<string name="txt_today">Today</string>
	<string name="txt_week">Week</string>
	<string name="txt_lifetime">Lifetime</string>
	<string name="txt_year">Year</string>
	<string name="txt_month">Month</string>
	<string name="txt_hint_share">Write something about this</string>
	<string name="txt_share_on_fb">Post on Facebook</string>
	<string name="txt_share_activities">Share Activities</string>
	<string name="err_share_unsuccessful">Image could not be shared</string>
	<string name="txt_challenges">Challenges</string>
	<string name="txt_my_challenges">My Challenges</string>
	<string name="txt_ongoing_challenges">Ongoing And Upcoming</string>
	<string name="txt_join_challenge">Join</string>
	<string name="txt_title_challenge_details">Challenge Details</string>
	<string name="rank">Rank</string>
	<string name="athlete">Athlete</string>
	<string name="distance">Distance</string>
	<string name="join">Join</string>
	<string name="leaderboard">Leaderboard</string>
	<string name="left">Left</string>
	<string name="total_distance">Total Distance</string>
	<string name="err_pin_code_invalid">Pin code must be 6 digits long</string>
	<string name="err_passwords_same">Old password and new password cannot be same</string>
	<string name="participant">Participants</string>
	<string name="txt_no_ongoing_challenges">No new challenges.</string>
	<string name="alert_cannot_change_pwd">You cannot change the password as you are logged in with Facebook.</string>
	<string name="txt_recent_orders">Recent Orders</string>
	<string name="txt_completed_orders">Completed Orders</string>
	<string name="txt_title_my_orders">My Orders</string>
	<string name="txt_delivered_on">"Delivered On : "</string>
	<string name="txt_delivered">Delivered On</string>
	<string name="txt_size">Size : </string>
	<string name="invite_code">Invite Code (If any)</string>
</resources>