<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:scaleType="fitXY"
    tools:context="affinity.com.srisabaries.ui.activities.SignUpActivity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_black_24dp" />

        <affinity.com.srisabaries.customviews.CustomTypefaceTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/d_pad_title_toolbar"
            android:textColor="@color/c_black" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/d_mar_ll_login_signup"
            android:layout_marginRight="@dimen/d_mar_ll_login_signup"
            android:orientation="vertical">


            <ImageView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dp10"
                android:src="@drawable/login_img" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delites"
                android:textSize="@dimen/txt_size_sp18"
                android:textColor="@color/c_black"
                android:layout_marginBottom="@dimen/d_mar_login_title"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Welcome back"
                android:layout_marginBottom="@dimen/dp10"
                android:textColor="@color/c_black"
                android:textSize="@dimen/dp25"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign in to continue"
                android:textSize="@dimen/txt_size_sp18"
                android:layout_marginBottom="@dimen/d_mar_login_title"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_40"
                android:layout_marginRight="@dimen/dp_40"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_email_id"
                    style="@style/edittext_login_sign_up"
                    android:hint="@string/hint_email_id"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/edittext_login_sign_up"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />

                <affinity.com.srisabaries.customviews.CustomTypefaceTextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/txt_forgot_password"
                    android:textColor="@color/webnexsColor"
                    android:textSize="@dimen/s_txt_forgot_pwd" />

                <affinity.com.srisabaries.customviews.CustomTypefaceButton
                    android:id="@+id/btn_login"
                    style="@style/btn_splash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/d_mar_btn_login"
                    android:background="@drawable/x_ds_transparent_blue"
                    android:gravity="center"
                    android:padding="@dimen/d_pad_btn_login_sign_up"
                    android:text="@string/txt_login"
                    android:textAllCaps="true"
                    android:textSize="@dimen/s_tv_login_options"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="You don't have an account? Sign Up"
                    android:textSize="@dimen/s_txt_16sp"
                    android:layout_marginTop="@dimen/d_mar_login_title"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    </LinearLayout>


</RelativeLayout>
